5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1671_1107.log
== TEST (2019-04-24 02:22:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<1) or (x>7):
	print("A entrada",x,"eh invalida")
elif (x=="1"):
	s= (x+v)
	print("Hoje eh segunda e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:22:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<1) or (x>7):
	print("A entrada",x,"eh invalida")
elif (x=="1"):
	s= (x+v)
	print("Hoje eh segunda e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:22:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<1) or (x>7):
	print("A entrada",x,"eh invalida")
elif (x==1):
	s= (x+v)
	print("Hoje eh segunda e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:37:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	s= ((x+v)%1)
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	s= ((x+v)%2)
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	s= ((x+v)%1)
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	s= ((x+v)%1)
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	s= ((x+v)%2)
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:38:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	s= ((x+v)%1)
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	s= ((x+v)%2)
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	s= ((x+v)%1)
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	s= ((x+v)%1)
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	s= ((x+v)%2)
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:38:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	s= ((x+v)%1)
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	s= ((x+v)%2)
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	s= ((x+v)%1)
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	s= ((x+v)%1)
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	s= ((x+v)%2)
	print("Hoje eh sabado e o dia futuro eh", s)
-- EXECUTION TIME:
0.109905
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:38:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	s= ((x+v)%1)
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	s= ((x+v)%2)
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	s= ((x+v)%1)
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	s= ((x+v)%1)
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	s= ((x+v)%2)
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:38:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	s= ((x+v)%1)
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	s= ((x+v)%2)
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	s= ((x+v)%1)
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	s= ((x+v)%1)
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	s= ((x+v)%2)
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:38:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	s= ((x+v)%1)
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	s= ((x+v)%2)
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	s= ((x+v)%1)
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	s= ((x+v)%2)
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	s= ((x+v)%1)
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	s= ((x+v)%2)
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:39:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))

s= ((x+v)%2)
s= ((x+v)%1)
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:39:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))

s= ((x+v)%2)
l= ((x+v)%1)
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", l)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", l)
elif (x==4):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", l)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:47:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
elif ((x+v)%7 == 0):
	s= "domingo"
elif ((x+v)%7 == 1):
	s= "segunda"
elif ((x+v)%7 == 2):
	s= "terca"
elif ((x+v)%7 == 3):
	s= "quarta"
elif ((x+v)%7 == 4):
	s= "quinta"
elif ((x+v)%7 == 5):
	s= "sexta"
elif ((x+v)%7 == 6):
	s= "sabado"
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:48:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
elif ((x+v)%7 == 0):
	s= "domingo"
elif ((x+v)%7 == 1):
	s= "segunda"
elif ((x+v)%7 == 2):
	s= "terca"
elif ((x+v)%7 == 3):
	s= "quarta"
elif ((x+v)%7 == 4):
	s= "quinta"
elif ((x+v)%7 == 5):
	s= "sexta"
elif ((x+v)%7 == 6):
	s= "sabado"
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
-- ERROR:
File "XXXX", line 8
    elif ((x+v)%7 == 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:48:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if ((x+v)%7 == 0):
	s= "domingo"
elif ((x+v)%7 == 1):
	s= "segunda"
elif ((x+v)%7 == 2):
	s= "terca"
elif ((x+v)%7 == 3):
	s= "quarta"
elif ((x+v)%7 == 4):
	s= "quinta"
elif ((x+v)%7 == 5):
	s= "sexta"
elif ((x+v)%7 == 6):
	s= "sabado"
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:48:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if ((x+v)%7 == 0):
	s= "domingo"
elif ((x+v)%7 == 1):
	s= "segunda"
elif ((x+v)%7 == 2):
	s= "terca"
elif ((x+v)%7 == 3):
	s= "quarta"
elif ((x+v)%7 == 4):
	s= "quinta"
elif ((x+v)%7 == 5):
	s= "sexta"
elif ((x+v)%7 == 6):
	s= "sabado"
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	print("Hoje eh quinta e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:48:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x= int(input("HJ: "))
v= int(input("Dia do fut: "))
 
if ((x+v)%7 == 0):
	s= "domingo"
elif ((x+v)%7 == 1):
	s= "segunda"
elif ((x+v)%7 == 2):
	s= "terca"
elif ((x+v)%7 == 3):
	s= "quarta"
elif ((x+v)%7 == 4):
	s= "quinta"
elif ((x+v)%7 == 5):
	s= "sexta"
elif ((x+v)%7 == 6):
	s= "sabado"
if (x<0) or (x>6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	print("Hoje eh domingo e o dia futuro eh", s)
elif (x==1):
	print("Hoje eh segunda e o dia futuro eh", s)
elif (x==2):
	print("Hoje eh terca e o dia futuro eh", s)
elif (x==3):
	print("Hoje eh quarta e o dia futuro eh", s)
elif (x==4):
	print("Hoje eh quinta e o dia futuro eh", s)
elif (x==5):
	print("Hoje eh sexta e o dia futuro eh", s)
elif (x==6):
	print("Hoje eh sabado e o dia futuro eh", s)
-- EXECUTION TIME:
0.192741
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
